feat: add /auth/verify route to user package
